# scaffold-openbrush

./: .gitignore  Cargo.toml  README.md
contracts/: README.md
contracts/staking/: Cargo.toml  lib.rs
contracts/steakoin/: Cargo.toml  lib.rs
src/: Cargo.toml  lib.rs
src/impls/: mod.rs  staking.rs
src/libs/: errors.rs
src/traits/: staking.rs
