[package]
name = "staking"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", version = "3.0.0", default-features = false, features = ["psp22"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
dapp = { path = "../../src", default-features = false, features = ["staking"] }

[dev-dependencies]
ink_e2e = "4.0.1"

[lib]
name = "staking"
path = "lib.rs"
crate-type = [
	"cdylib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "dapp/std"]
ink-as-dependency = []
e2e-tests = []

# [profile.release]
# overflow-checks = false     # Disable integer overflow checks.
# lto = false                 # Enable full link-time optimization. 